# cheat_checker

./: Cargo.toml  README.md
src/: main.rs
