[package]
name = "cheat_checker"
description = "Detects similarities between sets of files"
version = "2.2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/typecasto/cheat_checker"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.faster]
opt-level = 3
lto = "fat"
codegen-units = 1
inherits="release"


[dependencies]
anyhow = "1.0.69"
bpaf = { version = "0.7.8", features = ["derive", "color"] }
chardet = "0.2.4"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
glob = "0.3.1"
indicatif = "0.17.3"
log = "0.4.17"
owo-colors = { version = "3.5.0", features = ["supports-color"] }
pretty_env_logger = "0.4.0"
eddie = "0.4.2"
